# ArrowObsidian

./: ArrowObsidian.cabal  README.org
Obsidian/: ArrowObsidian.hs
Obsidian/.svn/: entries
Obsidian/ArrowObsidian/: API.hs  Arr.hs  Bitwise.hs  CodeGen.hs  Execute.hs  Exp.hs  Test.hs
Obsidian/ArrowObsidian/.svn/: entries
Obsidian/ArrowObsidian/.svn/text-base/: Arr.hs.svn-base  CodeGen.hs.svn-base  Core.hs.svn-base  Flatten.hs.svn-base  Printing.hs.svn-base  PureAPI.hs.svn-base  Types.hs.svn-base
Obsidian/ArrowObsidian/Examples/: DotProd.hs  Test.hs
