Name: ArrowObsidian
Version: 0.1

License:      BSD3 
License-file: LICENSE
Stability:    Experimental
Maintainer:   Joel Svensson<svensson.bj@gmail.com>
Author:       Joel Svensson<svensson.bj@gmail.com>

Copyright:    Copyright (c) 2008 - 2011 Joel Svensson
Synopsis:     Embedded GPU kernel language 
HomePage:     www.cse.chalmers.se/~joels
Description: 
  Domain Specific Embedded Language for GPU Kernel implementation


Category: EDSL 
Cabal-Version: >= 1.8
Tested-With: GHC == 7.0.3

build-type: Simple

Library
  build-depends: base >= 4 && < 5, haskell98
               , mtl
               , process
               , filepath
               , directory
              

  exposed-modules: Obsidian.ArrowObsidian
                 , Obsidian.ArrowObsidian.Printing 
                 , Obsidian.ArrowObsidian.Exp 
                 , Obsidian.ArrowObsidian.Flatten
                 , Obsidian.ArrowObsidian.Arr 
                 , Obsidian.ArrowObsidian.Core
                 , Obsidian.ArrowObsidian.CodeGen
                 , Obsidian.ArrowObsidian.Execute 
                 , Obsidian.ArrowObsidian.PureAPI
                 , Obsidian.ArrowObsidian.API

  other-modules: Obsidian.ArrowObsidian.Types
               , Obsidian.ArrowObsidian.Bitwise


  GHC-Options: -O2 